Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-15433

[Doc] Warnings when buiding docs

    XMLWordPrintableJSON

Details

    Description

      /home/antoine/miniconda3/envs/pyarrow/lib/python3.9/site-packages/numpydoc/docscrape.py:418: UserWarning: Unknown section Results in the docstring of <built-in function from_buffer> in None.
        warn(msg)
      /home/antoine/miniconda3/envs/pyarrow/lib/python3.9/site-packages/numpydoc/docscrape.py:418: UserWarning: Unknown section Results in the docstring of <built-in function from_buffer> in None.
        warn(msg)
      /home/antoine/arrow/dev/docs/source/developers/guide/resources.rst:50: WARNING: Bullet list ends without a blank line; unexpected unindent.
      /home/antoine/arrow/dev/docs/source/python/api/dataset.rst:46: WARNING: autosummary: failed to import ORCFileFormat
      /home/antoine/arrow/dev/docs/source/python/api/dataset.rst:46: WARNING: autosummary: failed to import FragmentScanOptions
      /home/antoine/arrow/dev/docs/source/python/api/plasma.rst:28: WARNING: autosummary: failed to import ObjectID
      /home/antoine/arrow/dev/docs/source/python/api/plasma.rst:28: WARNING: autosummary: failed to import PlasmaClient
      /home/antoine/arrow/dev/docs/source/python/api/plasma.rst:28: WARNING: autosummary: failed to import PlasmaBuffer
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "ScalarAggregateOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "CountOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "ModeOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "VarianceOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "QuantileOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "TDigestOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "IndexOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "ArithmeticOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "ElementWiseAggregateOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "RoundOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "RoundTemporalOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "RoundToMultipleOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "JoinOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "MatchSubstringOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "SplitOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "SplitPatternOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "ReplaceSliceOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "ReplaceSubstringOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "ExtractRegexOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "SetLookupOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "StructFieldOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "StrptimeOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "StrftimeOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static const char * kDefaultFormat   = "%Y-%m-%dT%H:%M:%S"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "PadOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "TrimOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "SliceOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "NullOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "MakeStructOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "DayOfWeekOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "AssumeTimezoneOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "WeekOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "Utf8NormalizeOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "RandomOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "FilterOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "TakeOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "DictionaryEncodeOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "ArraySortOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "SortOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "SelectKOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "PartitionNthOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/compute.rst:51: WARNING: Invalid C++ declaration: Expected identifier in nested name, got keyword: static [error at 23]
        static constexpr static char const kTypeName []  = "CastOptions"
        -----------------------^
      /home/antoine/arrow/dev/docs/source/cpp/api/dataset.rst:62: WARNING: Parsing of expression failed. Using fallback parser. Error was:
      Error in postfix expression, expected primary expression or type.
      If primary expression:
        Invalid C++ declaration: Expected identifier in nested name. [error at 59]
          std::function< Status(FileWriter *)> writer_pre_finish   = [](FileWriter*) {returnStatus::OK();}
          -----------------------------------------------------------^
      If type:
        Invalid C++ declaration: Expected identifier in nested name. [error at 59]
          std::function< Status(FileWriter *)> writer_pre_finish   = [](FileWriter*) {returnStatus::OK();}
          -----------------------------------------------------------^
      
      /home/antoine/arrow/dev/docs/source/cpp/api/dataset.rst:62: WARNING: Parsing of expression failed. Using fallback parser. Error was:
      Error in postfix expression, expected primary expression or type.
      If primary expression:
        Invalid C++ declaration: Expected identifier in nested name. [error at 60]
          std::function< Status(FileWriter *)> writer_post_finish   = [](FileWriter*) {returnStatus::OK();}
          ------------------------------------------------------------^
      If type:
        Invalid C++ declaration: Expected identifier in nested name. [error at 60]
          std::function< Status(FileWriter *)> writer_post_finish   = [](FileWriter*) {returnStatus::OK();}
          ------------------------------------------------------------^
      
      /home/antoine/arrow/dev/docs/source/cpp/api/dataset.rst:69: WARNING: Duplicate C++ declaration, also defined at cpp/api/dataset:69.
      Declaration is '.. cpp:function:: virtual Result< std::shared_ptr< FileFragment > > MakeFragment (FileSource source, compute::Expression partition_expression, std::shared_ptr< Schema > physical_schema)'.
      /home/antoine/arrow/dev/docs/source/cpp/api/formats.rst:120: WARNING: doxygenclass: Cannot find class "arrow::adapters::orc::WriteOptions" in doxygen xml output for project "arrow_cpp" from directory: ../../cpp/apidoc/xml
      /home/antoine/arrow/dev/docs/source/java/dataset.rst:100: WARNING: lablel non défini: 1projection                                                                        
      /home/antoine/arrow/dev/docs/source/python/memory.rst:124: WARNING: unknown document: cuda             
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 40m
                  2h 40m