ARROW-15433: [Doc] Fix warnings when building

This fixes a number of warnings emitted when building the Sphinx docs.

Closes #12242 from pitrou/ARROW-15433-doc-warnings

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>